# doc-monorepo

./: .env.example  ARCHITECTURE.md  README.md  TODO.md  docker-compose.yml
doc-proxy/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
doc-proxy/examples/: HKP_ARF_1.0.0.xsd  HKP_BAS_1.0.0.xsd  HKP_FEH_TECH_1.0.0.xsd  HKP_LNW_1.0.0.xsd  SLP_BAS_1.0.0.xsd
doc-proxy/migrations/: 001_create_devices.sql
doc-proxy/src/: main.rs
doc-proxy/src/config/: auth.rs  database.rs  logger.rs  middleware.rs  mod.rs  router.rs
doc-proxy/src/domain/leistungsnachweis/: entity.rs  error.rs  service.rs  value_objects.rs  xml.rs
doc-proxy/src/handlers/: auth.rs  device.rs  health.rs  mod.rs  users_api.rs
doc-proxy/src/handlers/leistungsnachweis/: api.rs  error.rs  mod.rs  request.rs  response.rs  service.rs
doc-proxy/src/models/: document.rs  mod.rs  pagination.rs  user.rs
doc-proxy/src/models/leistungsnachweis/: error.rs  mod.rs  parser.rs  validator.rs
doc-proxy/src/models/leistungsnachweis/types/: leistungen.rs  leistungsnachweis.rs  mod.rs  unterschrift.rs
doc-proxy/src/repositories/: device_repository.rs  mod.rs  user_repository.rs
doc-proxy/src/repositories/entity/: device.rs  user.rs
doc-proxy/src/services/: core_client.rs  mock_data.rs  mod.rs
doc-web-view/: Dockerfile  README.md  biome.json  build.md  design_guidelines.md  middleware.ts  package.json
doc-web-view/app/: globals.css  layout.tsx  page.tsx
doc-web-view/components/: batch-sign-modal.tsx  document-signing-page.tsx  document-viewer.tsx  export-menu.tsx  signature-modal.tsx  (+2 more)
(+34 files in other folders)
