[package]
name = "doc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2.0"
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
